--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,10 +1,35 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation libraries.rxJava
+    implementation libraries.inject
+    testImplementation libraries.junit
+    testImplementation libraries.assertj_core
+    testImplementation libraries.mockito_kotlin
+    implementation libraries.kotlin
 }
 
 sourceCompatibility = "7"
 targetCompatibility = "7"
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath libraries.kotlin
+    }
+}
+repositories {
+    mavenCentral()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = versions.java
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = versions.java
+    }
+}
