--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    apply from: rootProject.file('dependencies.gradle')
     ext.kotlin_version = '1.3.72'
     repositories {
         google()
