create master fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation libraries.daggerSupport
     implementation project(path: ':domain')
     implementation project(path: ':data')
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation libraries.lottieAnimation
     kapt libraries.daggerProcessor
     kapt libraries.daggerAndroidApt
     implementation libraries.okhttpLogger
