--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion versions.compileSdk
@@ -70,4 +71,5 @@ dependencies {
     testImplementation libraries.testRules
     implementation libraries.ifecycleextensions
     implementation libraries.recyclerviewanimators
+    implementation libraries.glide
 }
