--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,39 +1,39 @@
 ext {
     versions = [
             // For project configuration
-            java                : JavaVersion.VERSION_1_8,
-            minSdk              : 21,
-            compileSdk          : 29,
-            targetSdk           : 29,
-            appCompat           : '1.0.2',
-            inject                : '1',
-            buildTools          : '29.0.3',
-            kotlin_version      : '1.3.72',
+            java              : JavaVersion.VERSION_1_8,
+            minSdk            : 21,
+            compileSdk        : 29,
+            targetSdk         : 29,
+            appCompat         : '1.0.2',
+            inject            : '1',
+            buildTools        : '29.0.3',
+            kotlin_version    : '1.3.72',
 
-            retrofit            : '2.6.0',
-            retrofitAdapter     : '2.6.0',
-            jakewhartonAdapter  : '1.0.0',
-            geson               : '2.8.5',
-            navVersion          : '2.1.0-alpha05',
+            retrofit          : '2.6.0',
+            retrofitAdapter   : '2.6.0',
+            jakewhartonAdapter: '1.0.0',
+            geson             : '2.8.5',
+            navVersion        : '2.1.0',
 
-            retrofitRxAdapter     :'2.4.0',
+            retrofitRxAdapter :'2.4.0',
 
             // For app
 
-            constraintLayout    : '1.1.3',
-            recyclerview        : '1.1.0-alpha06',
+            constraintLayout  : '1.1.3',
+            recyclerview      : '1.1.0-alpha06',
 
-            nav_version          : "2.1.0",
+            nav_version       : "2.1.0",
 
-            gcm                 : '16.1.0',
-            material            : '1.1.0-alpha07',
+            gcm               : '16.1.0',
+            material          : '1.1.0-alpha07',
 
-            dagger              : '2.23.1',
+            dagger            : '2.23.1',
 
-            rxAndroid           : '2.1.1',
+            rxAndroid         : '2.1.1',
 
-            rxJava              : '2.2.8',
-            rxBindingAppCompat  : '3.0.0-alpha2',
+            rxJava            : '2.2.8',
+            rxBindingAppCompat: '3.0.0-alpha2',
 
             okhttp              : '4.0.0-alpha02',
 
@@ -97,21 +97,22 @@ ext {
             shimmerView          : "com.facebook.shimmer:shimmer:${versions.shimmer_version}",
 
 
-            rxAndroid            : "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}",
-            rxJava               : "io.reactivex.rxjava2:rxjava:${versions.rxJava}",
-            rxBindingAppCompat   : "com.jakewharton.rxbinding3:rxbinding-appcompat:${versions.rxBindingAppCompat}",
+            rxAndroid         : "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}",
+            rxJava            : "io.reactivex.rxjava2:rxjava:${versions.rxJava}",
+            rxBindingAppCompat: "com.jakewharton.rxbinding3:rxbinding-appcompat:${versions.rxBindingAppCompat}",
 
-            okhttp               : "com.squareup.okhttp3:okhttp:${versions.okhttp}",
-            okhttpLogger         : "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}",
-            viewPager2           : "androidx.viewpager2:viewpager2:1.0.0-rc01",
+            okhttp            : "com.squareup.okhttp3:okhttp:${versions.okhttp}",
+            okhttpLogger      : "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}",
+            viewPager2        : "androidx.viewpager2:viewpager2:1.0.0-rc01",
+            glide             : "com.github.bumptech.glide:glide:4.11.0",
 
             // For testing
-            junit              : "junit:junit:${versions.junit}",
-            coreTest           : "androidx.test:core:${versions.coreTest}",
-            mockitoCore        : "org.mockito:mockito-core:${versions.mockito}",
-            mockito            : "org.mockito:mockito-android:${versions.mockito}",
-            testRules          : "androidx.test:rules:${versions.testRules}",
-            extJunit           : "androidx.test.ext:junit:${versions.extJunit}",
+            junit             : "junit:junit:${versions.junit}",
+            coreTest          : "androidx.test:core:${versions.coreTest}",
+            mockitoCore       : "org.mockito:mockito-core:${versions.mockito}",
+            mockito           : "org.mockito:mockito-android:${versions.mockito}",
+            testRules         : "androidx.test:rules:${versions.testRules}",
+            extJunit          : "androidx.test.ext:junit:${versions.extJunit}",
             testRunner         : "androidx.test:runner:${versions.testRunner}",
             espressoCore       : "androidx.test.espresso:espresso-core:${versions.espresso}",
             espressoContrib    : "androidx.test.espresso:espresso-contrib:${versions.espresso}",
