--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion versions.compileSdk
@@ -30,6 +31,15 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
 }
 
 dependencies {
@@ -37,16 +47,17 @@ dependencies {
     implementation libraries.kotlin
     implementation libraries.appCompat
     implementation libraries.material
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation libraries.rxBindingAppCompat
-    implementation libraries.dagger
-    implementation libraries.daggerSupport
+    implementation libraries.hilt
+    implementation libraries.hiltViewModel
     implementation project(path: ':domain')
     implementation project(path: ':data')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation libraries.lottieAnimation
     implementation libraries.shimmerView
-    kapt libraries.daggerProcessor
-    kapt libraries.daggerAndroidApt
+    kapt libraries.hiltProcessor
+    kapt libraries.hiltCompiler
     implementation libraries.okhttpLogger
     implementation libraries.geson
     implementation libraries.retrofit
@@ -60,7 +71,7 @@ dependencies {
     implementation libraries.rxJava
     implementation libraries.rxAndroid
     implementation libraries.recyclerview
-    implementation libraries.corektx
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation libraries.constraintLayout
     testImplementation libraries.mockito_kotlin
     testImplementation libraries.junit
@@ -72,4 +83,5 @@ dependencies {
     implementation libraries.ifecycleextensions
     implementation libraries.recyclerviewanimators
     implementation libraries.glide
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
 }
